styles.css
:root {
    --primary-accent:rgb(28, 183, 175);
    --accent-gray:#e3e3e3;
    --accent-dark-gray:#222224;

}

/* Main page styles*/

body {
    background-color: white;
}

.container-fluid {
    margin-left: auto;
    margin-right: auto;

}

.slideshow {

    top:0;
    background-color: var(--accent-dark-gray);
}

.topbar {
    background-color: var(--accent-dark-gray);
    position: sticky;
    top:0;
    color:white;

}


.image-container {
    width:100%;
    margin-left:auto;
    margin-right:auto;
    
}

.slideshow-pic {
    width: 100%;
    height: 500px;
    object-fit: cover;




}



/*Main page end*/


/* Button Styles */
.btn {
    background-color: var(--primary-accent);
    color: white;
    border:solid;
    border-radius:0;
}

.btn:hover {
    background-color: white;
    color: var(--primary-accent);
}

.btn:active .btn:focus {
    background-color: white;
}

.btn-left-end {
    border-radius: 40px 0 0 40px ;
    border-left: solid;
}

.btn-right-end {
    border-radius: 0 40px 40px 0;
    border-right: solid;
}

.buttons-container {
    margin-left: auto;
    margin-right: auto;
    width: 30%;
    min-width: 300px;

}


.contact-btn {
    color: white;
}

.contact-btn:hover {
    color: var(--primary-accent);
}

.project-buttons {
    width:100%;
    padding-top:0%;
}

.overlay {
    position:fixed;
    display:none;
}

.content-btn {
    margin-top:1%;
    margin-bottom:1%;

}

/* Button styles end */

/* About page styles */

.about-page {
    padding: 2%;
    margin-left:auto;
    margin-right:auto;
    max-width:1200px;

}
.qualifications {

    background-color: var(--accent-gray);
    border-radius: 12px;
    border-style: solid;
    border-color: var(--primary-accent);
    border-width: 0 0 0 5px;
    height: 500px;
    max-width: 700px;

}

.q-lists {
    border-style: solid;
    border-color: var(--primary-accent);
    border-width: 0 0 0 5px;

}

.skillset {
    height: 100px;
    overflow: auto;
}

.self-intro {

    border-radius: 12px;
    border-width: 0 0 0 5px;
    height: 500px;
    max-width: 700px;
}

.self-intro p {
    text-justify: auto;
}

/* About page styles end */

/* Projects page styles */

.project-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 16px;
  width:80%;
  max-width: 2400px;
  margin: 0 auto;
  padding: 20px 10px;
}

.project-name h3{
    margin:0;
}

.project-preview {
    background-color: var(--accent-gray);
  width: 100%;
  max-width: 420px;
  height: 420px;
  border-radius: 12px;

}

.thumbnail {
    width: 100%;
    height:250px;
    border-radius: 12px;

}

.project-text {
    font-size: 16px;
}

.thumbnail img {
    width: 100%;
    height:240px;
    border-radius: 10px;
    object-fit: cover;
}

.thumbnail video {
    width: 100%;
    height:240px;
    border-radius: 10px;
    object-fit: cover;
}



/* Projects page styles end */


.sitefooter {
    /* margin-top: 50%; */
    bottom:0;
    width: 100%;
    height: 50px;


    justify-content: center;
    background-color: var(--primary-accent);
    color:white;
}

